--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -9,17 +9,34 @@
     <!-- Iconscout cdn-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <!-- Header Section -->
-    <header class="header-section">
-        <h1 class="header-heading"><span>premium</span> quality</h1>
+    <header>
+        <div class="logo"><a href="#">elenganza</a></div>
+        <ul class="navbar">
+            <li><a href="#home">Home</a></li>
+            <li class="dropdown">
+                <a href="#clothes">Clothing</a>
+                <ul class="submenu">
+                  <li><a href="#dresses">Dresses</a></li>
+                  <li><a href="#tops">Tops & Shirts</a></li>
+                  <li><a href="#pants">Pants</a></li>
+                  <li><a href="#sets">Sets</a></li>
+                  <li><a href="#coats">Coats & Jackets</a></li>
+                </ul>
+            </li>
+            <li><a href="#bags">Bags</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#cart"><i class="fa-solid fa-bag-shopping"></i></a></li>
+        </ul>
     </header>
+    
     <!-- Main Content Section -->
 
     <!-- Footer Section -->
+
+    <script src="script.js"></script>
 </body>
 </html>
