--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -14,26 +14,31 @@
 <body>
     <!-- Header Section -->
     <header>
-        <div class="logo"><a href="#">elenganza</a></div>
+        <a href="#" class="logo">elenganza</a>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
-            <li class="dropdown">
-                <a href="#clothes">Clothing</a>
-                <ul class="submenu">
-                  <li><a href="#dresses">Dresses</a></li>
-                  <li><a href="#tops">Tops & Shirts</a></li>
-                  <li><a href="#pants">Pants</a></li>
-                  <li><a href="#sets">Sets</a></li>
-                  <li><a href="#coats">Coats & Jackets</a></li>
-                </ul>
-            </li>
+            <li><a href="#new">New</a></li>
+            <li><a href="#clothes">Clothings</a></li>
             <li><a href="#bags">Bags</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="#cart"><i class="fa-solid fa-bag-shopping"></i></a></li>
         </ul>
+        <div class="header-icon">
+            <a href="#">
+                <i class="fa-solid fa-bag-shopping"></i>
+            </a>
+            <div class="bx bx-menu" id="menu-icon"></div>
+        </div>
     </header>
     
     <!-- Main Content Section -->
+    <main>
+        <section class="home" id="home">
+            <div class="home-text">
+                <h1>New <br><span>Arrivals</span></h1>
+                <button class="btn"><a href="new">shop here <span>!!!</span></a></button>
+            </div>
+        </section>
+    </main>
 
     <!-- Footer Section -->
 
