stuck on the carousel for featured content

--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -32,12 +32,77 @@
     
     <!-- Main Content Section -->
     <main>
+        <!-- Home section -->
         <section class="home" id="home">
             <div class="home-text">
                 <h1>New <br><span>Arrivals</span></h1>
                 <button class="btn"><a href="new">shop here <span>!!!</span></a></button>
             </div>
         </section>
+
+        <!-- Featured section -->
+        <section class="featured" id="featured">
+            <div class="section-title">
+              <h2>Featured Content</h2>
+              <p>See what is trending in our shop.</p>
+            </div>
+            <div class="carousel-container">
+              <i class="fa-solid fa-arrow-left" id="prevBtn"></i>
+              <div class="featured-content">
+                <div class="carousel-item">
+                  <div class="row">
+                    <img src="./pics/fea1.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>High-Waisted Wide-Leg Pants</h5>
+                      <p>500£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                  </div>
+                </div> <!-- end item 1-->
+                <div class="carousel-item">
+                  <div class="row">
+                    <img src="./pics/fea2.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>White Summer Dress</h5>
+                      <p>430£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                  </div>
+                </div> <!-- end item 2-->
+                <div class="carousel-item">
+                  <div class="row">
+                    <img src="./pics/fea3.webp">
+                    <div class="content-text">
+                      <h5>High-Waisted Stripped Pants</h5>
+                      <p>500£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                  </div>
+                </div> <!-- end item 3-->
+                <div class="carousel-item">
+                  <div class="row">
+                    <img src="./pics/fea4.webp">
+                    <div class="content-text">
+                      <h5>Baby Blue Summer Top</h5>
+                      <p>250£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                  </div>
+                </div> <!-- end item 4-->
+                <div class="carousel-item">
+                  <div class="row">
+                    <img src="./pics/fea5.webp">
+                    <div class="content-text">
+                      <h5>Cotton White Oversized T-Shirt</h5>
+                      <p>300£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                  </div>
+                </div> <!-- end item 5-->
+              </div>
+              <i class="fa-solid fa-arrow-right" id="nextBtn"></i>
+            </div>
+        </section> 
     </main>
 
     <!-- Footer Section -->
