new prog - finished featured & featured bags section

--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -46,63 +46,138 @@
               <h2>Featured Content</h2>
               <p>See what is trending in our shop.</p>
             </div>
-            <div class="carousel-container">
-              <i class="fa-solid fa-arrow-left" id="prevBtn"></i>
-              <div class="featured-content">
-                <div class="carousel-item">
-                  <div class="row">
-                    <img src="./pics/fea1.webp" alt="sets">
+            <div class="wrapper">
+              <i class="fa-solid fa-arrow-left" id="left"></i>
+              <div class="carousel">
+                <div class="row">
+                  <img src="./pics/fea1.webp" alt="sets">
                     <div class="content-text">
                       <h5>High-Waisted Wide-Leg Pants</h5>
                       <p>500£</p>
                       <button class="btn"><a href="#">show more</a></button>
                     </div>
-                  </div>
+                    <span class="sale-tag">30% Sale</span>
                 </div> <!-- end item 1-->
-                <div class="carousel-item">
-                  <div class="row">
-                    <img src="./pics/fea2.webp" alt="sets">
+
+                <div class="row">
+                  <img src="./pics/fea2.webp" alt="sets">
                     <div class="content-text">
-                      <h5>White Summer Dress</h5>
-                      <p>430£</p>
+                      <h5>Short White Summer Dress</h5>
+                      <p>450£</p>
                       <button class="btn"><a href="#">show more</a></button>
                     </div>
-                  </div>
                 </div> <!-- end item 2-->
-                <div class="carousel-item">
-                  <div class="row">
-                    <img src="./pics/fea3.webp">
+
+                <div class="row">
+                  <img src="./pics/fea3.webp" alt="sets">
                     <div class="content-text">
                       <h5>High-Waisted Stripped Pants</h5>
                       <p>500£</p>
                       <button class="btn"><a href="#">show more</a></button>
                     </div>
-                  </div>
+                    <span class="sale-tag">30% Sale</span>
                 </div> <!-- end item 3-->
-                <div class="carousel-item">
-                  <div class="row">
-                    <img src="./pics/fea4.webp">
+
+                <div class="row">
+                  <img src="./pics/fea4.webp" alt="sets">
                     <div class="content-text">
-                      <h5>Baby Blue Summer Top</h5>
+                      <h5>Blue Fitted Summer Top</h5>
                       <p>250£</p>
                       <button class="btn"><a href="#">show more</a></button>
                     </div>
-                  </div>
                 </div> <!-- end item 4-->
-                <div class="carousel-item">
-                  <div class="row">
-                    <img src="./pics/fea5.webp">
+
+                <div class="row">
+                  <img src="./pics/fea5.webp" alt="sets">
                     <div class="content-text">
-                      <h5>Cotton White Oversized T-Shirt</h5>
+                      <h5>Oversized White T-Shirt</h5>
                       <p>300£</p>
                       <button class="btn"><a href="#">show more</a></button>
                     </div>
-                  </div>
                 </div> <!-- end item 5-->
               </div>
-              <i class="fa-solid fa-arrow-right" id="nextBtn"></i>
+              <i class="fa-solid fa-arrow-right" id="right"></i>
+            </div>
+            <div class="see-more">
+              <button class="page-btn"><span title="go to shop">go to shop</span></button>
             </div>
         </section> 
+
+        <!-- Featured Bags section-->
+        <section class="featured-bags" id="featured-bags">
+          <div class="section-title">
+            <h2>Bags & Backpacks</h2>
+            <p>Practical and Trendy Bags.</p>
+          </div>
+          <div class="bags-grid">
+            <div class="grid-item">
+              <img src="./pics/bag1.jpg" alt="">
+              <div class="content-text">
+                <h5>Large Shoulder Bag in Multi-colored woven nappa leather</h5>
+                <p>670£</p>
+                <button class="btn"><a href="#">show more</a></button>
+              </div>
+              <span class="sale-tag">30% Sale</span>
+            </div> <!-- end item 1-->
+
+            <div class="grid-item">
+              <img src="./pics/bag2.jpg" alt="">
+              <div class="content-text">
+                <h5>Orange Mini Handbag</h5>
+                <p>430£</p>
+                <button class="btn"><a href="#">show more</a></button>
+              </div>
+            </div> <!-- end item 2-->
+
+            <div class="grid-item">
+              <img src="./pics/bag3.jpg" alt="">
+              <div class="content-text">
+                <h5>Marc Jacops Beige Tote Bag</h5>
+                <p>840£</p>
+                <button class="btn"><a href="#">show more</a></button>
+              </div>
+            </div> <!-- end item 3-->
+
+            <div class="grid-item">
+              <img src="./pics/bag4.jpg" alt="">
+              <div class="content-text">
+                <h5>Mini Grass Green Shoulder Bag</h5>
+                <p>340£</p>
+                <button class="btn"><a href="#">show more</a></button>
+              </div>
+            </div> <!-- end item 4-->
+
+            <div class="grid-item">
+              <img src="./pics/bag5.jpg" alt="">
+              <div class="content-text">
+                <h5>Baby Pink Mini Handbag</h5>
+                <p>590£</p>
+                <button class="btn"><a href="#">show more</a></button>
+              </div>
+              <span class="sale-tag">30% Sale</span>
+            </div> <!-- end item 5-->
+
+            <div class="grid-item">
+              <img src="./pics/bag6.webp" alt="">
+              <div class="content-text">
+                <h5>Back To School Blue Backpack</h5>
+                <p>290£</p>
+                <button class="btn"><a href="#">show more</a></button>
+              </div>
+            </div> <!-- end item 6-->
+          </div>
+          <div class="see-more">
+            <button class="page-btn"><span title="go to shop">go to shop</span></button>
+          </div>
+        </section>
+
+        <!-- Categories section-->
+        <section class="categories">
+          <div class="section-title">
+            <h2>categories</h2>
+            <p>We offer a large and inclusive inventory for you to choose from.</p>
+          </div>
+        </section>
     </main>
 
     <!-- Footer Section -->
