new prog -finished category section

--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -177,6 +177,97 @@
             <h2>categories</h2>
             <p>We offer a large and inclusive inventory for you to choose from.</p>
           </div>
+          <div class="categories-container">
+            <div class="category">
+              <img src="./pics/category1.webp" alt="">
+              <div>
+                <h2>Sets</h2>
+                <button class="btn-category">
+                  <span>view products<i class="fa-solid fa-arrow-right"></i></span>
+                </button>
+              </div>
+            </div> <!-- end item 1 -->
+
+            <div class="category">
+              <img src="./pics/category2.jpg" alt="">
+              <div>
+                <h2>Shirts</h2>
+                <button class="btn-category">
+                  <span>view products<i class="fa-solid fa-arrow-right"></i></span>
+                </button>
+              </div>
+            </div> <!-- end item 2 -->
+
+            <div class="category">
+              <img src="./pics/category3.webp" alt="">
+              <div>
+                <h2>dresses</h2>
+                <button class="btn-category">
+                  <span>view products<i class="fa-solid fa-arrow-right"></i></span>
+                </button>
+              </div>
+            </div> <!-- end item 3 -->
+
+            <div class="category">
+              <img src="./pics/category4.jpg" alt="">
+              <div>
+                <h2>tops</h2>
+                <button class="btn-category">
+                  <span>view products<i class="fa-solid fa-arrow-right"></i></span>
+                </button>
+              </div>
+            </div> <!-- end item 4 -->
+
+            <div class="category">
+              <img src="./pics/category5.webp" alt="">
+              <div>
+                <h2>pants</h2>
+                <button class="btn-category">
+                  <span>view products<i class="fa-solid fa-arrow-right"></i></span>
+                </button>
+              </div>
+            </div> <!-- end item 5 -->
+
+            <div class="category">
+              <img src="./pics/category6.jpg" alt="">
+              <div>
+                <h2>coats</h2>
+                <button class="btn-category">
+                  <span>view products<i class="fa-solid fa-arrow-right"></i></span>
+                </button>
+              </div>
+            </div> <!-- end item 6 -->
+
+            <div class="category">
+              <img src="./pics/category7.jpg" alt="">
+              <div>
+                <h2>jackets</h2>
+                <button class="btn-category">
+                  <span>view products<i class="fa-solid fa-arrow-right"></i></span>
+                </button>
+              </div>
+            </div> <!-- end item 7 -->
+
+            <div class="category">
+              <img src="./pics/category8.jpg" alt="">
+              <div>
+                <h2>bags</h2>
+                <button class="btn-category">
+                  <span>view products<i class="fa-solid fa-arrow-right"></i></span>
+                </button>
+              </div>
+            </div> <!-- end item 8 -->
+
+            <div class="category">
+              <img src="./pics/category9.jpg" alt="">
+              <div>
+                <h2>Backpacks</h2>
+                <button class="btn-category">
+                  <span>view products<br/><i class="fa-solid fa-arrow-right"></i></span>
+                </button>
+              </div>
+            </div> <!-- end item 9 -->
+          </div>
         </section>
     </main>
 
