finished home page

--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <a href="#" class="logo">elenganza</a>
+        <a href="#home" class="logo">elenganza</a>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
             <li><a href="#new">New</a></li>
@@ -269,9 +269,92 @@
             </div> <!-- end item 9 -->
           </div>
         </section>
+
+        <!-- OnSale section-->
+        <section class="sales-section" id="sales">
+          <div class="section-title">
+            <h2>On Sale</h2>
+            <p>Unbeatable Deals Await! Dive into our On Sale Wonderland!</p>
+          </div>
+          <div class="onsale-content">
+            <div class="onsale-item">
+              <img src="./pics/fea3.webp" alt="">
+              <div class="content-text">
+                <h5>High-Waisted Wide-Leg Pants</h5>
+                <p>5̶0̶0̶£ - <span>350£</span></p>
+                <button class="sale-btn"><a href="#">show more</a></button>
+              </div>
+              <span class="sale-tag">30% Sale</span>
+            </div> <!-- end item 1-->
+
+            <div class="onsale-item">
+              <img src="./pics/fea1.webp" alt="">
+              <div class="content-text">
+                <h5>High-Waisted Wide-Leg Pants</h5>
+                <p>5̶0̶0̶£ - <span>350£</span></p>
+                <button class="sale-btn"><a href="#">show more</a></button>
+              </div>
+              <span class="sale-tag">30% Sale</span>
+            </div> <!-- end item 2-->
+
+            <div class="onsale-item">
+              <img src="./pics/sale1.jpg" alt="">
+              <div class="content-text">
+                <h5>Multi-colored woven nappa leather bag</h5>
+                <p>6̶7̶0̶£ - <span>455£</span></p>
+                <button class="sale-btn"><a href="#">show more</a></button>
+              </div>
+              <span class="sale-tag">30% Sale</span>
+            </div> <!-- end item 3-->
+
+            <div class="onsale-item">
+              <img src="./pics/sale2.jpg" alt="">
+              <div class="content-text">
+                <h5>Baby Pink Mini Handbag</h5>
+                <p>5̶9̶0̶£ - <span>413£</span></p>
+                <button class="sale-btn"><a href="#">show more</a></button>
+              </div>
+              <span class="sale-tag">30% Sale</span>
+            </div> <!-- end item 3-->
+          </div>
+        </section>
     </main>
 
     <!-- Footer Section -->
+    <footer>
+      <div class="section-title">
+        <h2>Elenganza</h2>
+      </div>
+      <div class="footer-content">
+        <div class="footer-item">
+          <h3>customer</h3>
+          <a href="#new">new</a>
+          <a href="#sales">sales</a>
+          <a href="#terms">terms & conditions</a>
+          <a href="#privacy">privacy policy</a>
+        </div> <!-- end item 1-->
+        <div class="footer-item">
+          <h3>categories</h3>
+          <a href="#sets">sets</a>
+          <a href="#sets">shirts</a>
+          <a href="#sets">dresses</a>
+          <a href="#sets">tops</a>
+          <a href="#sets">pants</a>
+          <a href="#sets">coats</a>
+          <a href="#sets">jackets</a>
+          <a href="#sets">bags</a>
+          <a href="#sets">backpacks</a>
+        </div> <!-- end item 2-->
+        <div class="footer-item">
+          <h3>About</h3>
+          <a href="#">about us</a>
+          <p>contact@elenganza.com</p>
+        </div> <!-- end item 3-->
+      </div>
+      <div class="terms">
+        <small>Copyright © 2023 Elenganza</small>
+      </div>
+    </footer>
 
     <script src="./script.js"></script>
 </body>
