--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -17,7 +17,7 @@
         <a href="#home" class="logo">elenganza</a>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
-            <li><a href="#new">New</a></li>
+            <li><a href="./new.html">New</a></li>
             <li><a href="#clothes">Clothings</a></li>
             <li><a href="#bags">Bags</a></li>
             <li><a href="#about">About Us</a></li>
@@ -39,7 +39,7 @@
                 <button class="btn"><a href="new">shop here <span>!!!</span></a></button>
             </div>
         </section>
-
+        
         <!-- Featured section -->
         <section class="featured" id="featured">
             <div class="section-title">
