--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -26,7 +26,7 @@
             <a href="#">
                 <i class="fa-solid fa-bag-shopping"></i>
             </a>
-            <div class="bx bx-menu" id="menu-icon"></div>
+            <i class="fa-solid fa-bars"></i>
         </div>
     </header>
     
@@ -328,7 +328,8 @@
       <div class="footer-content">
         <div class="footer-item">
           <h3>customer</h3>
-          <a href="#new">new</a>
+          <a href="./index.html">home</a>
+          <a href="./new.html">new</a>
           <a href="#sales">sales</a>
           <a href="#terms">terms & conditions</a>
           <a href="#privacy">privacy policy</a>
