--- a/e-commerce/new.html
+++ b/e-commerce/new.html
@@ -5,6 +5,9 @@
     <title>New in - Elenganza</title>
     <link rel="stylesheet" href="styles.css">
 
+    <!-- Iconscout cdn-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Fonts -->
 </head>
 <body>
     <!-- Header Section -->
@@ -21,22 +24,87 @@
             <a href="#">
                 <i class="fa-solid fa-bag-shopping"></i>
             </a>
-            <div class="bx bx-menu" id="menu-icon"></div>
+            <i class="fa-solid fa-bars"></i>
         </div>
     </header>
     
     <!-- New clothes section -->
     <section class="new-clothes">
+        <!--the title card-->
         <div class="new-title">
             <h1>clothing</h1>
+            <div class="new-title-pics">
+                <img src="./pics/new1.jpg" alt="">
+                <img src="./pics/new2.jpg" alt="">
+                <img src="./pics/new3.jpg" alt="">
+                <img src="./pics/new4.jpg" alt="">
+                <img src="./pics/new5.jpg" alt="">
+                <img src="./pics/new6.jpg" alt="">
+                <img src="./pics/new7.jpg" alt="">
+            </div>
         </div>
+        <!--end title card-->
+        <p id="count"></p>
         <div id="parentDiv">
             <div class="sectionItem">...</div>
             <div class="sectionItem">...</div>
             <div class="sectionItem">...</div>
-            <!-- More section items -->
-          </div>
-          <p id="count"></p>
+        </div>
     </section>
+
+    <!--new bags section-->
+    <section class="new-bags">
+        <div class="new-title">
+            <h1>bags</h1>
+            <div class="new-title-pics">
+                <img src="./pics/newbag1.jpg" alt="">
+                <img src="./pics/newbag3.jpg" alt="">
+                <img src="./pics/newbag4.jpg" alt="">
+                <img src="./pics/newbag2.jpg" alt="">
+                <img src="./pics/newbag5.png" alt="">
+                <img src="./pics/newbag6.webp" alt="">
+                <img src="./pics/newbag7.jpg" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <div class="section-title">
+          <h2>Elenganza</h2>
+        </div>
+        <div class="footer-content">
+          <div class="footer-item">
+            <h3>customer</h3>
+            <a href="./index.html">home</a>
+            <a href="./new.html">new</a>
+            <a href="#sales">sales</a>
+            <a href="#terms">terms & conditions</a>
+            <a href="#privacy">privacy policy</a>
+          </div> <!-- end item 1-->
+          <div class="footer-item">
+            <h3>categories</h3>
+            <a href="#sets">sets</a>
+            <a href="#sets">shirts</a>
+            <a href="#sets">dresses</a>
+            <a href="#sets">tops</a>
+            <a href="#sets">pants</a>
+            <a href="#sets">coats</a>
+            <a href="#sets">jackets</a>
+            <a href="#sets">bags</a>
+            <a href="#sets">backpacks</a>
+          </div> <!-- end item 2-->
+          <div class="footer-item">
+            <h3>About</h3>
+            <a href="#">about us</a>
+            <p>contact@elenganza.com</p>
+          </div> <!-- end item 3-->
+        </div>
+        <div class="terms">
+          <small>Copyright © 2023 Elenganza</small>
+        </div>
+    </footer>
+  
+    <script src="./script2.js"></script>
 </body>
 </html>
