--- a/e-commerce/new.html
+++ b/e-commerce/new.html
@@ -47,18 +47,106 @@
         <div class="new-container">
             <p class="count" id="clothes-count"></p>
             <div class="parentDiv" id="clothes-container">
-                <div class="clothes-item">...</div> <!--end item 1-->
-                <div class="clothes-item">...</div> <!--end item 2-->
-                <div class="clothes-item">...</div> <!--end item 3-->
-                <div class="clothes-item">...</div> <!--end item 4-->
-                <div class="clothes-item">...</div> <!--end item 5-->
-                <div class="clothes-item">...</div> <!--end item 6-->
-                <div class="clothes-item">...</div> <!--end item 7-->
-                <div class="clothes-item">...</div> <!--end item 8-->
-                <div class="clothes-item">...</div> <!--end item 9-->
-                <div class="clothes-item">...</div> <!--end item 10-->
-                <div class="clothes-item">...</div> <!--end item 11-->
-                <div class="clothes-item">...</div> <!--end item 12-->
+                <div class="clothes-item">
+                    <img src="./pics/fea1.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>High-Waisted Wide-Leg Pants</h5>
+                      <p>500£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>                  
+                    <span class="sale-tag">30% Sale</span>
+                </div> <!--end item 1-->
+                <div class="clothes-item">
+                    <img src="./pics/fea2.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>Short White Summer Dress</h5>
+                      <p>450£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 2-->
+                <div class="clothes-item">
+                    <img src="./pics/fea3.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>High-Waisted Stripped Pants</h5>
+                      <p>500£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                    <span class="sale-tag">30% Sale</span>
+                </div> <!--end item 3-->
+                <div class="clothes-item">
+                    <img src="./pics/fea4.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>Blue Fitted Summer Top</h5>
+                      <p>250£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 4-->
+                <div class="clothes-item">
+                    <img src="./pics/fea5.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>Oversized White T-Shirt</h5>
+                      <p>300£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 5-->
+                <div class="clothes-item">
+                    <img src="./pics/fea1.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>High-Waisted Wide-Leg Pants</h5>
+                      <p>500£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                    <span class="sale-tag">30% Sale</span>
+                </div> <!--end item 6-->
+                <div class="clothes-item">
+                    <img src="./pics/fea2.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>Short White Summer Dress</h5>
+                      <p>450£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 7-->
+                <div class="clothes-item">
+                    <img src="./pics/fea3.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>High-Waisted Stripped Pants</h5>
+                      <p>500£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                    <span class="sale-tag">30% Sale</span>
+                </div> <!--end item 8-->
+                <div class="clothes-item">
+                    <img src="./pics/fea4.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>Blue Fitted Summer Top</h5>
+                      <p>250£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 9-->
+                <div class="clothes-item">
+                    <img src="./pics/fea5.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>Oversized White T-Shirt</h5>
+                      <p>300£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 10-->
+                <div class="clothes-item">
+                    <img src="./pics/fea4.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>Blue Fitted Summer Top</h5>
+                      <p>250£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 12-->
+                <div class="clothes-item">
+                    <img src="./pics/fea5.webp" alt="sets">
+                    <div class="content-text">
+                      <h5>Oversized White T-Shirt</h5>
+                      <p>300£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 12-->
             </div>
             <div class="pagination">
                 <button class="btn1" onclick="backBtn()"><i class="fa-solid fa-arrow-left"></i></button>
@@ -88,26 +176,113 @@
         <div class="new-container">
             <p class="count" id="bags-count"></p>
             <div class="parentDiv" id="bags-container">
-                <div class="bag-item">...</div> <!--end item 1-->
-                <div class="bag-item">...</div> <!--end item 2-->
-                <div class="bag-item">...</div> <!--end item 3-->
-                <div class="bag-item">...</div> <!--end item 4-->
-                <div class="bag-item">...</div> <!--end item 5-->
-                <div class="bag-item">...</div> <!--end item 6-->
-                <div class="bag-item">...</div> <!--end item 7-->
-                <div class="bag-item">...</div> <!--end item 8-->
-                <div class="bag-item">...</div> <!--end item 9-->
-                <div class="bag-item">...</div> <!--end item 10-->
-                <div class="bag-item">...</div> <!--end item 11-->
-                <div class="bag-item">...</div> <!--end item 12-->
+                <div class="bag-item">
+                    <img src="./pics/bag1.jpg" alt="">
+                    <div class="content-text">
+                        <h5>Large Shoulder Bag in Multi-colored woven nappa leather</h5>
+                        <p>670£</p>
+                        <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                    <span class="sale-tag">30% Sale</span>
+                </div> <!--end item 1-->
+                <div class="bag-item">
+                    <img src="./pics/bag2.jpg" alt="">
+                    <div class="content-text">
+                      <h5>Orange Mini Handbag</h5>
+                      <p>430£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 2-->
+                <div class="bag-item">
+                    <img src="./pics/bag3.jpg" alt="">
+                    <div class="content-text">
+                      <h5>Marc Jacops Beige Tote Bag</h5>
+                      <p>840£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 3-->
+                <div class="bag-item">
+                    <img src="./pics/bag4.jpg" alt="">
+                    <div class="content-text">
+                      <h5>Mini Grass Green Shoulder Bag</h5>
+                      <p>340£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 4-->
+                <div class="bag-item">
+                    <img src="./pics/bag5.jpg" alt="">
+                    <div class="content-text">
+                      <h5>Baby Pink Mini Handbag</h5>
+                      <p>590£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                    <span class="sale-tag">30% Sale</span>
+                </div> <!--end item 5-->
+                <div class="bag-item">
+                    <img src="./pics/bag6.webp" alt="">
+                    <div class="content-text">
+                      <h5>Back To School Blue Backpack</h5>
+                      <p>290£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 6-->
+                <div class="bag-item">
+                    <img src="./pics/bag1.jpg" alt="">
+                    <div class="content-text">
+                      <h5>Large Shoulder Bag in Multi-colored woven nappa leather</h5>
+                      <p>670£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 7-->
+                <div class="bag-item">
+                    <img src="./pics/bag2.jpg" alt="">
+                    <div class="content-text">
+                      <h5>Orange Mini Handbag</h5>
+                      <p>430£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 8-->
+                <div class="bag-item">
+                    <img src="./pics/bag3.jpg" alt="">
+                    <div class="content-text">
+                      <h5>Marc Jacops Beige Tote Bag</h5>
+                      <p>840£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 9-->
+                <div class="bag-item">
+                    <img src="./pics/bag4.jpg" alt="">
+                    <div class="content-text">
+                      <h5>Mini Grass Green Shoulder Bag</h5>
+                      <p>340£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 10-->
+                <div class="bag-item">
+                    <img src="./pics/bag5.jpg" alt="">
+                    <div class="content-text">
+                      <h5>Baby Pink Mini Handbag</h5>
+                      <p>590£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                    <span class="sale-tag">30% Sale</span>
+                </div> <!--end item 11-->
+                <div class="bag-item">
+                    <img src="./pics/bag6.webp" alt="">
+                    <div class="content-text">
+                      <h5>Back To School Blue Backpack</h5>
+                      <p>290£</p>
+                      <button class="btn"><a href="#">show more</a></button>
+                    </div>
+                </div> <!--end item 12-->
             </div>
             <div class="pagination">
-                <button class="btn1" onclick="backBtn()"><i class="fa-solid fa-arrow-left"></i></button>
+                <button class="btn21" onclick="backBtn2()"><i class="fa-solid fa-arrow-left"></i></button>
                 <ul>
-                    <li class="link active" value="1" onclick="activeLink()">1</li>
-                    <li class="link" value="2" onclick="activeLink()">2</li>
+                    <li class="link2 active" value="1" onclick="activeLink2()">1</li>
+                    <li class="link2" value="2" onclick="activeLink2()">2</li>
                 </ul>
-                <button class="btn2" onclick="nextBtn()"><i class="fa-solid fa-arrow-right"></i></button>
+                <button class="btn22" onclick="nextBtn2()"><i class="fa-solid fa-arrow-right"></i></button>
             </div>
         </div>
     </section>
@@ -166,32 +341,106 @@
 
         //========================= pagination for page one ==================
         let link = document.getElementsByClassName("link");
+        let clothesItems = document.getElementsByClassName("clothes-item");
         let currentValue = 1;
-        function activeLink(){
-            for(l of link){
-                l.classList.remove("active");
-            }
-            event.target.classList.add("active");
-            currentValue = event.target.value;
+
+        // Hide all clothes items initially
+        for (let i = 6; i < clothesItems.length; i++) {
+            clothesItems[i].style.display = "none";
         }
-        function backBtn(){
-            if(currentValue > 1){
-                for(l of link){
-                    l.classList.remove("active");
-                }
-                currentValue--;
-                link[currentValue-1].classList.add("active");
+
+        function activeLink() {
+        for (l of link) {
+            l.classList.remove("active");
+        }
+        event.target.classList.add("active");
+        currentValue = parseInt(event.target.value);
+        updateClothesItemsVisibility();
+        }
+
+        function backBtn() {
+        if (currentValue > 1) {
+            for (l of link) {
+            l.classList.remove("active");
+            }
+            currentValue--;
+            link[currentValue - 1].classList.add("active");
+            updateClothesItemsVisibility();
+        }
+        }
+
+        function nextBtn() {
+        if (currentValue < link.length) {
+            for (l of link) {
+            l.classList.remove("active");
+            }
+            currentValue++;
+            link[currentValue - 1].classList.add("active");
+            updateClothesItemsVisibility();
+        }
+        }
+
+        function updateClothesItemsVisibility() {
+        for (let i = 0; i < clothesItems.length; i++) {
+            if (i >= (currentValue - 1) * 6 && i < currentValue * 6) {
+            clothesItems[i].style.display = "block";
+            } else {
+            clothesItems[i].style.display = "none";
             }
         }
-        function nextBtn(){
-            if(currentValue < 2){
-                for(l of link){
-                    l.classList.remove("active");
-                }
-                currentValue++;
-                link[currentValue-1].classList.add("active");
+        }
+
+
+        // ========================= pagination for page two ==================
+        let bagLink = document.getElementsByClassName("link2");
+        let bagItems = document.getElementsByClassName("bag-item");
+        let bagCurrentValue = 1;
+
+        // Hide all clothes items initially
+        for (let i = 6; i < clothesItems.length; i++) {
+            bagItems[i].style.display = "none";
+        }
+        function activeLink2() {
+        for (l of bagLink) {
+            l.classList.remove("active");
+        }
+        event.target.classList.add("active");
+        bagCurrentValue = parseInt(event.target.value);
+        updateBagItemsVisibility();
+        }
+
+        function backBtn2() {
+        if (bagCurrentValue > 1) {
+            for (l of bagLink) {
+            l.classList.remove("active");
+            }
+            bagCurrentValue--;
+            bagLink[bagCurrentValue - 1].classList.add("active");
+            updateBagItemsVisibility();
+        }
+        }
+
+        function nextBtn2() {
+        if (bagCurrentValue < bagLink.length) {
+            for (l of bagLink) {
+            l.classList.remove("active");
+            }
+            bagCurrentValue++;
+            bagLink[bagCurrentValue - 1].classList.add("active");
+            updateBagItemsVisibility();
+        }
+        }
+
+        function updateBagItemsVisibility() {
+        for (let i = 0; i < bagItems.length; i++) {
+            if (i >= (bagCurrentValue - 1) * 6 && i < bagCurrentValue * 6) {
+            bagItems[i].style.display = "block";
+            } else {
+            bagItems[i].style.display = "none";
             }
         }
+        }
+
     </script>
 </body>
 </html>
