finished new page

--- a/e-commerce/new.html
+++ b/e-commerce/new.html
@@ -330,14 +330,14 @@
         const sectionClothes = clothesDiv.getElementsByClassName('clothes-item');
         const clothesCount = sectionClothes.length;
         const countClothes = document.getElementById('clothes-count');
-        countClothes.textContent = `${clothesCount} items`;
+        countClothes.textContent = `${clothesCount} items in stock`;
 
         //========================= new bags counter ==================
         const bagsDiv = document.getElementById('bags-container');
         const sectionBags = bagsDiv.getElementsByClassName('bag-item');
         const bagsCount = sectionBags.length;
         const countBags = document.getElementById('bags-count');
-        countBags.textContent = `${bagsCount} items`;
+        countBags.textContent = `${bagsCount} items in stock`;
 
         //========================= pagination for page one ==================
         let link = document.getElementsByClassName("link");
