finished terms & privacy pages

--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -331,8 +331,8 @@
           <a href="./index.html">home</a>
           <a href="./new.html">new</a>
           <a href="#sales">sales</a>
-          <a href="#terms">terms & conditions</a>
-          <a href="#privacy">privacy policy</a>
+          <a href="./terms.html">terms & conditions</a>
+          <a href="./privacy.html">privacy policy</a>
         </div> <!-- end item 1-->
         <div class="footer-item">
           <h3>categories</h3>
