--- a/e-commerce/new.html
+++ b/e-commerce/new.html
@@ -297,9 +297,9 @@
             <h3>customer</h3>
             <a href="./index.html">home</a>
             <a href="./new.html">new</a>
-            <a href="#sales">sales</a>
-            <a href="#terms">terms & conditions</a>
-            <a href="#privacy">privacy policy</a>
+            <a href="./index.html#sales">sales</a>
+            <a href="./terms.html">terms & conditions</a>
+            <a href="./privacy.html">privacy policy</a>
           </div> <!-- end item 1-->
           <div class="footer-item">
             <h3>categories</h3>
